modification fonction checker

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -50,7 +50,7 @@
           </div>
 
           <div class="modal-body">
-            <form name="reserve" action="index.html" method="post" >
+            <form name="reserve" action="index.html" method="get" >
               <div class="formData first-container">
                 <label for="first">Prénom</label><br>
                 <input class="text-control" type="text" id="first" name="first" minlength="2" placeholder="votre prénom ici" autocomplete="off"  required/><br>
@@ -65,7 +65,7 @@
 
               <div class="formData email-container">
                 <label for="email">E-mail</label><br>
-                <input class="text-control" type="email" id="email" name="email" placeholder="Ex:Dupond@gmail.com" autocomplete="off" required /><br>
+                <input class="text-control" type="email" id="email" name="email" placeholder="Ex:email@domaine.com" autocomplete="off" required /><br>
                 <span></span>
               </div>
 
