modification modale de confirmation

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -47,8 +47,9 @@
 
           <div class="formConfirmation">
             <span></span>
+            <input class="btn-submit-confirm" type="submit" class="button" value="Fermer"/> 
           </div>
-
+          
           <div class="modal-body">
             <form name="reserve" action="index.html" method="get" >
               <div class="formData first-container">
