modification des valeurs de la date de naissance

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -72,8 +72,8 @@
 
               <div class="formData birthdate-container">
                 <label for="birthdate">Date de naissance</label><br>
-                <input class="text-control" type="date" id="birthdate" name="birthdate" autocomplete="off" value="2017-01-01"
-                max="2018-12-31"><br>
+                <input class="text-control" type="date" id="birthdate" name="birthdate" autocomplete="off"  required max="2018-12-31">
+                <br>
                 <span></span>
               </div>
 
