--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -45,10 +45,12 @@
         <div class="content">
           <span class="close"></span>
 
+          <!-- Formulaire de confirmation -->
           <div class="formConfirmation">
             <span></span>
-            <input class="btn-submit-confirm" type="submit" class="button" value="Fermer"/> 
+            <input class="btn-submit-confirm" type="submit" class="button" onclick="closeModal()"  value="Fermer"/> 
           </div>
+          <!-- Fin de formulaire de confirmation -->
           
           <div class="modal-body">
             <form name="reserve" action="index.html" method="get" >
