découpage du fichier css en plusieurs fichiers css

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <title>Reservation</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="modal.css" />
+    <link rel="stylesheet" href="styles.css/modal.css"/>
+    <link rel="stylesheet" href="./styles.css/responsive.css">
+    <link rel="stylesheet" href="./styles.css/formConfirmation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet"/>
   </head>
@@ -51,7 +53,7 @@
             <input class="btn-submit-confirm" type="submit" class="button" onclick="closeModal()"  value="Fermer"/> 
           </div>
           <!-- Fin de formulaire de confirmation -->
-          
+
           <div class="modal-body">
             <form name="reserve" action="index.html" method="get" >
               <div class="formData first-container">
