--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="utf-8" />
     <title>Reservation</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="styles.css/modal.css"/>
-    <link rel="stylesheet" href="./styles.css/responsive.css">
-    <link rel="stylesheet" href="./styles.css/formConfirmation.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="./starterOnly/styles.css/formConfirmation.css">
+    <link rel="stylesheet" href="./starterOnly/styles.css/modal.css">
+    <link rel="stylesheet" href="./starterOnly/styles.css/modalRegistration.css">
+    <link rel="stylesheet" href="./starterOnly/styles.css/navbar.css">
+    <link rel="stylesheet" href="./starterOnly/styles.css/responsive.css">
+   
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet"/>
   </head>
   
@@ -15,7 +19,7 @@
     <header>
       <div class="topnav" id="myTopnav">
         <div class="header-logo">
-          <img alt="logo" src="./images/Logo.png" />
+          <img alt="logo" src="./starterOnly/images/Logo.png" />
         </div>
         <div class="main-navbar">
           <a href="#" class="active"><span>Accueil</span></a>
@@ -38,7 +42,7 @@
           <button class="btn-signup modal-btn">je m'inscris</button>
         </div>
         <div class="hero-img">
-          <img src="./images/bg_img.jpg" alt="photo video game player"/>
+          <img src="./starterOnly/images/bg_img.jpg" alt="photo video game player"/>
         </div>
         <button class="btn-signup modal-btn">je m'inscris</button>
       </div>
@@ -141,6 +145,6 @@
     <footer>
       <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
-    <script src="modal.js"></script>
+    <script src="./starterOnly/modal.js"></script>
   </body>
 </html>
