--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <!-- Formulaire de confirmation -->
           <div class="formConfirmation">
             <span></span>
-            <input class="btn-submit-confirm" type="submit" class="button" onclick="closeModal()"  value="Fermer"/> 
+            <input class="btn-submit-confirm"  type="submit"  onclick="closeModal()"  value="Fermer"/> 
           </div>
           <!-- Fin de formulaire de confirmation -->
 
@@ -122,7 +122,7 @@
 
               <div class="formData checkbox1">
                 <input class="checkbox-input" type="checkbox" id="checkbox1"/>
-                <label class="checkbox2-label" for="checkbox1" required>
+                <label class="checkbox2-label" for="checkbox1">
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
@@ -136,7 +136,7 @@
                 <br>
               </div>
 
-              <input class="btn-submit" type="submit" class="button" value="C'est parti"/>
+              <input class="btn-submit button" type="submit" value="C'est parti"/>
             </form>
           </div>
         </div>
@@ -145,6 +145,8 @@
     <footer>
       <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
+    <script src="./starterOnly/modalConfirmation.js"></script>
+    <script src="./starterOnly/modalRegistration.js"></script>
     <script src="./starterOnly/modal.js"></script>
   </body>
 </html>
