--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     <footer>
       <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
-    <script src="./starterOnly/modalConfirmation.js"></script>
-    <script src="./starterOnly/modalRegistration.js"></script>
-    <script src="./starterOnly/modal.js"></script>
+    <script src="./script/modalConfirmation.js"></script>
+    <script src="./script/modalRegistration.js"></script>
+    <script src="./script/modal.js"></script>
   </body>
 </html>
