--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <br>
               </div>
 
-              <input class="btn-submit button" type="submit" value="C'est parti"/>
+              <input class="btn-submit button" type="submit"  value="C'est parti"/>
             </form>
           </div>
         </div>
@@ -145,8 +145,8 @@
     <footer>
       <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
-    <script src="./script/modalConfirmation.js"></script>
-    <script src="./script/modalRegistration.js"></script>
-    <script src="./script/modal.js"></script>
+    <script src="./scripts/modalConfirmation.js"></script>
+    <script src="./scripts/modalRegistration.js"></script>
+    <script src="./scripts/modal.js"></script>
   </body>
 </html>
