modification des noms de fichiers js

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           </div>
           <!-- Fin de formulaire de confirmation -->
 
+          <!-- Formulaire d'inscription -->
           <div class="modal-body">
             <form name="reserve" action="index.html" method="get" >
               <div class="formData first-container">
@@ -146,7 +147,7 @@
       <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
     <script src="./scripts/modalConfirmation.js"></script>
-    <script src="./scripts/modalRegistration.js"></script>
-    <script src="./scripts/modal.js"></script>
+    <script src="./scripts/openCloseModale.js"></script>
+    <script src="./scripts/form.js"></script>
   </body>
 </html>
