modification des commentaires

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <title>Reservation</title>
+    <title>Inscription à des jeux vidéos GameOn</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <link rel="stylesheet" href="./starterOnly/styles.css/formConfirmation.css">
-    <link rel="stylesheet" href="./starterOnly/styles.css/modal.css">
-    <link rel="stylesheet" href="./starterOnly/styles.css/modalRegistration.css">
+    <link rel="stylesheet" href="./starterOnly/styles.css/pictureGameOn.css">
+    <link rel="stylesheet" href="./starterOnly/styles.css/suscribeModal.css">
     <link rel="stylesheet" href="./starterOnly/styles.css/navbar.css">
     <link rel="stylesheet" href="./starterOnly/styles.css/responsive.css">
    
