--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 <input class="checkbox-input" type="radio" id="location6" name="location" value="Portland"/>
                 <label class="checkbox-label" for="location6">
-                <span class="checkbox-icon"></span>Portland</label>
+                <span class="checkbox-icon"></span>Portland</label><br>
                 <small></small>
               </div>
 
