modification de la fonction fermeture modale de confirmation inscription, fait en js au lieu de on click en html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <!-- Formulaire de confirmation -->
           <div class="formConfirmation">
             <span></span>
-            <input class="btn-submit-confirm"  type="submit"  onclick="closeModal()"  value="Fermer"/> 
+            <input class="btn-submit-confirm"  type="submit"    value="Fermer"/> 
           </div>
           <!-- Fin de formulaire de confirmation -->
 
