modification du code javascript pour les boutons radio

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   
   <body>
+    <!-- Navbar -->
     <header>
       <div class="topnav" id="myTopnav">
         <div class="header-logo">
@@ -46,7 +47,8 @@
         </div>
         <button class="btn-signup modal-btn">je m'inscris</button>
       </div>
-
+      
+       <!-- Formulaire d'inscription -->
       <div class="bground">
         <div class="content">
           <span class="close"></span>
@@ -58,7 +60,6 @@
           </div>
           <!-- Fin de formulaire de confirmation -->
 
-          <!-- Formulaire d'inscription -->
           <div class="modal-body">
             <form name="reserve" action="index.html" method="get" >
               <div class="formData first-container">
