modification du nom du fichier de la modale

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
     <script src="./scripts/modalConfirmation.js"></script>
-    <script src="./scripts/openCloseModale.js"></script>
+    <script src="./scripts/modalForm.js"></script>
     <script src="./scripts/form.js"></script>
   </body>
 </html>
