amélioration du responsive, le bouton d'inscription

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
         <button class="btn-signup modal-btn">je m'inscris</button>
       </div>
       
-       <!-- Formulaire d'inscription -->
+       <!-- modalForm -->
       <div class="bground">
         <div class="content">
           <span class="close"></span>
 
-          <!-- Formulaire de confirmation -->
+          <!-- modalConfirmation -->
           <div class="formConfirmation">
             <span></span>
             <input class="btn-submit-confirm"  type="submit"    value="Fermer"/> 
           </div>
-          <!-- Fin de formulaire de confirmation -->
+          <!-- End modalConfirmation -->
 
           <div class="modal-body">
             <form name="reserve" action="index.html" method="get" >
