ajout du shortcut icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="./starterOnly/styles.css/responsive.css">
    
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet"/>
+   <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet"/>
+   <link rel="shortcut icon" href="./starterOnly/images/Capture.PNG">
+
   </head>
   
   <body>
@@ -82,7 +84,7 @@
 
               <div class="formData birthdate-container">
                 <label for="birthdate">Date de naissance</label><br>
-                <input class="text-control" type="date" id="birthdate" name="birthdate" autocomplete="off"  required max="2018-12-31">
+                <input class="text-control" type="date" id="birthdate" name="birthdate" autocomplete="off"  required max="2007-12-31">
                 <br>
                 <span></span>
               </div>
