utilisation de la jsDoc pour les commentaires

--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <meta name="robots" content="index,follow"/>
     <title>Inscription à des jeux vidéos GameOn</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-
+    <meta name="description" content="GameOn par openclassroom, inscription à des jeux vidéos">
+    <!-- files css  -->
     <link rel="stylesheet" href="./starterOnly/styles.css/formConfirmation.css">
     <link rel="stylesheet" href="./starterOnly/styles.css/pictureGameOn.css">
     <link rel="stylesheet" href="./starterOnly/styles.css/suscribeModal.css">
     <link rel="stylesheet" href="./starterOnly/styles.css/navbar.css">
     <link rel="stylesheet" href="./starterOnly/styles.css/responsive.css">
    
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet"/>
-   <link rel="shortcut icon" href="./starterOnly/images/Capture.PNG">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet"/>
+    <link rel="shortcut icon" href="./starterOnly/images/shortcutIcone.png">
 
   </head>
   
   <body>
-    <!-- Navbar -->
+    <!-- Navigation bar -->
     <header>
       <div class="topnav" id="myTopnav">
         <div class="header-logo">
