ajout d'une fonction pour faire apparaitre une modale d'inscription sans rafraichir le navigateur

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <button class="btn-signup modal-btn">je m'inscris</button>
         </div>
         <div class="hero-img">
-          <img src="./starterOnly/images/bg_img.jpg" alt="photo video game player"/>
+          <img src="./starterOnly/images/bg_img.jpg" alt="picture  game player"/>
         </div>
         <button class="btn-signup modal-btn">je m'inscris</button>
       </div>
